<resources>
    <string name="app_name">timeSheetApp</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="export">Export</string>
    <string name="share">Share</string>
    <string name="current_activity">Tap current activity</string>
    <string name="myName">My name:</string>
    <string name="MyGoogleCalendar">My google calendar</string>
    <string name="save">Save</string>
    <string name="nothing">Nothing</string>
    <string name="relaxing">Relaxing</string>
    <string name="sleeping">Sleeping</string>
    <string name="working">Working</string>
    <string name="exercising">Exercising</string>
    <string name="reading">Reading</string>
    <string name="travelling">Travelling</string>
    <string name="eating">Eating</string>
    <string name="washing">Washing</string>
    <string name="newButton">+ NEW</string>
    <string name="cleanLog">Clean log</string>
    <string name="undo">Undo</string>
    <string name="timeSinceLastTap">Time since last tap: </string>
    <string name="activityLog">Activity Log</string>
    <string name="date">Date</string>
    <string name="startTime">start time</string>
    <string name="acrivity">Activity</string>
    <string name="emailReportTo">Email report to:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="reportStartDate">Report \nstart date</string>
    <string name="reportEndDate">Report \nend date</string>
    <string name="email">Email</string>
    <string name="message_text">Please find attached my latest activity</string>
</resources>
